--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   shared_preferences: ^0.5.10
   google_fonts: ^1.1.0
   flutter_swiper: ^1.1.6
+  flutter_datetime_picker: ^1.4.0
+  numberpicker: ^1.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
