--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_fonts: ^1.1.0
   flutter_swiper: ^1.1.6
   flutter_datetime_picker: ^1.4.0
-  numberpicker: ^1.2.1
+  scroll_snap_list: ^0.4.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
